Replaced JDIC with Java 6 equivalents.
git-svn-id: https://subsonic.svn.sourceforge.net/svnroot/subsonic/trunk@656 24148959-8e0e-0410-9c20-a6ce11f09cd5